fix: button text align

--- a/src/app/private/components/tweet/tweet.component.css
+++ b/src/app/private/components/tweet/tweet.component.css
@@ -92,3 +92,7 @@
   justify-self: center;
   align-self: center;
 }
+
+app-button {
+  text-align: center;
+}
